force-app/main/default/objects/ManodhaaraAppointment__c/ManodhaaraAppointment__c.object-meta.xml
<CustomObject>
    <label>Manodhaara Appointment</label>
    <nameField>
        <displayFormat>MANO-{0000000}</displayFormat>
        <label>Manodhaara Appointment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manodhaara Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>