force-app/main/default/objects/ManodhaaraAppointment__c/fields/Angry__c.field-meta.xml
<CustomField>
    <fullName>Angry__c</fullName>
    <description>fetches the anger level of student from student portal</description>
    <label>Angry</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>