force-app/main/default/objects/ManodhaaraAppointment__c/fields/Anxious__c.field-meta.xml
<CustomField>
    <fullName>Anxious__c</fullName>
    <label>Anxious</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>