force-app/main/default/objects/ManodhaaraAppointment__c/fields/Appointment_Date_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_Formatted__c</fullName>
    <formula>DATEVALUE(Start_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Date Formatted</label>
    <type>Date</type>
</CustomField>