force-app/main/default/objects/ManodhaaraAppointment__c/fields/Confused__c.field-meta.xml
<CustomField>
    <fullName>Confused__c</fullName>
    <label>Confused</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>