force-app/main/default/objects/ManodhaaraAppointment__c/fields/Counsellig_Points__c.field-meta.xml
<CustomField>
    <fullName>Counsellig_Points__c</fullName>
    <label>Counsellig Points</label>
    <length>255</length>
    <type>Text</type>
</CustomField>