force-app/main/default/objects/ManodhaaraAppointment__c/fields/Counselling_Points__c.field-meta.xml
<CustomField>
    <fullName>Counselling_Points__c</fullName>
    <label>Counselling Points</label>
    <length>130768</length>
    <type>Html</type>
</CustomField>