force-app/main/default/objects/ManodhaaraAppointment__c/fields/Family_history__c.field-meta.xml
<CustomField>
    <fullName>Family_history__c</fullName>
    <label>Family history</label>
    <type>TextArea</type>
</CustomField>