force-app/main/default/objects/ManodhaaraAppointment__c/fields/Frightened__c.field-meta.xml
<CustomField>
    <fullName>Frightened__c</fullName>
    <label>Frightened</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>