force-app/main/default/objects/ManodhaaraAppointment__c/fields/Home_Work_picklist__c.field-meta.xml
<CustomField>
    <fullName>Home_Work_picklist__c</fullName>
    <label>Home Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical activity</fullName>
            </value>
            <value>
                <fullName>Food tracking</fullName>
            </value>
            <value>
                <fullName>Sleep tracking</fullName>
            </value>
            <value>
                <fullName>Journalling</fullName>
            </value>
            <value>
                <fullName>Zen Art</fullName>
            </value>
            <value>
                <fullName>Colour exercises</fullName>
            </value>
            <value>
                <fullName>Breathing exercise</fullName>
            </value>
            <value>
                <fullName>Exercise</fullName>
                <isActive>false</isActive>
                <label>Exercise</label>
            </value>
            <value>
                <fullName>Therapy</fullName>
                <isActive>false</isActive>
                <label>Therapy</label>
            </value>
            <value>
                <fullName>Yoga</fullName>
                <isActive>false</isActive>
                <label>Yoga</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>