force-app/main/default/objects/ManodhaaraAppointment__c/fields/HomeWork__c.field-meta.xml
<CustomField>
    <fullName>HomeWork__c</fullName>
    <label>Home Work Details</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>