force-app/main/default/objects/ManodhaaraAppointment__c/fields/How_Am_I_Feeling_Today__c.field-meta.xml
<CustomField>
    <fullName>How_Am_I_Feeling_Today__c</fullName>
    <description>This field tracks the mood of the counselee and is filled by counsellor</description>
    <label>How Am I Feeling Today?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angry</fullName>
            </value>
            <value>
                <fullName>Stressed</fullName>
            </value>
            <value>
                <fullName>Sad</fullName>
            </value>
            <value>
                <fullName>Lonely</fullName>
            </value>
            <value>
                <fullName>Hurt</fullName>
            </value>
            <value>
                <fullName>Confused</fullName>
            </value>
            <value>
                <fullName>Frightened</fullName>
            </value>
            <value>
                <fullName>Anxiety</fullName>
                <isActive>false</isActive>
                <label>Anxiety</label>
            </value>
            <value>
                <fullName>Feeling Good</fullName>
                <isActive>false</isActive>
                <label>Feeling Good</label>
            </value>
            <value>
                <fullName>Feeling Low</fullName>
                <isActive>false</isActive>
                <label>Feeling Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>