force-app/main/default/objects/ManodhaaraAppointment__c/fields/Hurt__c.field-meta.xml
<CustomField>
    <fullName>Hurt__c</fullName>
    <label>Hurt</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>