force-app/main/default/objects/ManodhaaraAppointment__c/fields/Lonely__c.field-meta.xml
<CustomField>
    <fullName>Lonely__c</fullName>
    <label>Lonely</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>