force-app/main/default/objects/ManodhaaraAppointment__c/fields/Medical_Information__c.field-meta.xml
<CustomField>
    <fullName>Medical_Information__c</fullName>
    <label>Medical Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>