force-app/main/default/objects/ManodhaaraAppointment__c/fields/Microsoft_Teams_Link__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Teams_Link__c</fullName>
    <description>contains teams link for online counselling</description>
    <label>Microsoft Teams Link</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>