force-app/main/default/objects/ManodhaaraAppointment__c/fields/Mode_Of_Counselling__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Counselling__c</fullName>
    <label>Mode Of Counselling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>