force-app/main/default/objects/ManodhaaraAppointment__c/fields/Notes_For_Counsellor__c.field-meta.xml
<CustomField>
    <fullName>Notes_For_Counsellor__c</fullName>
    <label>Notes For Counsellor</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>