force-app/main/default/objects/ManodhaaraAppointment__c/fields/Other_Presenting_Problem__c.field-meta.xml
<CustomField>
    <fullName>Other_Presenting_Problem__c</fullName>
    <label>Other- Presenting Problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>