force-app/main/default/objects/ManodhaaraAppointment__c/fields/Presenting_problem__c.field-meta.xml
<CustomField>
    <fullName>Presenting_problem__c</fullName>
    <label>Presenting problem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sleep issues</fullName>
            </value>
            <value>
                <fullName>Eating issues</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Friends</fullName>
            </value>
            <value>
                <fullName>Addictions</fullName>
            </value>
            <value>
                <fullName>Physical illness</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Emotional</fullName>
            </value>
            <value>
                <fullName>Anxiety</fullName>
            </value>
            <value>
                <fullName>Stress</fullName>
            </value>
            <value>
                <fullName>Depression</fullName>
            </value>
            <value>
                <fullName>Relationship Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>