force-app/main/default/objects/ManodhaaraAppointment__c/fields/Reason_For_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Cancellation__c</fullName>
    <description>This field stores the reason for cancellation captured from UI</description>
    <label>Reason For Cancellation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>