force-app/main/default/objects/ManodhaaraAppointment__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <label>Referral (If any)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>