force-app/main/default/objects/ManodhaaraAppointment__c/fields/RSW_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>RSW_Appointment_Type__c</fullName>
    <label>RSW Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
                <default>true</default>
                <label>Self</label>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>