force-app/main/default/objects/ManodhaaraAppointment__c/fields/RSW_Approver_Mail_Address__c.field-meta.xml
<CustomField>
    <fullName>RSW_Approver_Mail_Address__c</fullName>
    <formula>Owner:User.Manodhaara_Counselor__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSW Approver Mail Address</label>
    <type>Text</type>
</CustomField>