force-app/main/default/objects/ManodhaaraAppointment__c/fields/Sad__c.field-meta.xml
<CustomField>
    <fullName>Sad__c</fullName>
    <label>Sad</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>