force-app/main/default/objects/ManodhaaraAppointment__c/fields/SD_Time__c.field-meta.xml
<CustomField>
    <fullName>SD_Time__c</fullName>
    <formula>SUBSTITUTE(
    TEXT(
        DATETIMEVALUE(Start_Date_Time__c) + (5/24 + 30/(24*60))
    ), 
    &apos;T&apos;, &apos; &apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SD Time</label>
    <type>Text</type>
</CustomField>