force-app/main/default/objects/ManodhaaraAppointment__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Semi Urgent</fullName>
            </value>
            <value>
                <fullName>Not So Urgent</fullName>
            </value>
            <value>
                <fullName>As Soon As Possible</fullName>
                <isActive>false</isActive>
                <label>As Soon As Possible</label>
            </value>
            <value>
                <fullName>Critical</fullName>
                <isActive>false</isActive>
                <label>Critical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>