force-app/main/default/objects/ManodhaaraAppointment__c/fields/Stressed__c.field-meta.xml
<CustomField>
    <fullName>Stressed__c</fullName>
    <label>Stressed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>