force-app/main/default/objects/ManodhaaraAppointment__c/fields/Student_SRN__c.field-meta.xml
<CustomField>
    <fullName>Student_SRN__c</fullName>
    <description>Stores SRN  of related contact</description>
    <formula>Case__r.Contact.SRN_Number__c</formula>
    <label>Student SRN</label>
    <type>Text</type>
</CustomField>