force-app/main/default/objects/ManodhaaraAppointment__c/fields/Time_Slot_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot_Formatted__c</fullName>
    <formula>IF(VALUE(MID(SD_Time__c, 12, 2)) &gt;= 12, 
   IF(VALUE(MID(SD_Time__c, 12, 2)) = 12, &quot;12&quot;, TEXT(VALUE(MID(SD_Time__c, 12, 2)) - 12)), 
   TEXT(VALUE(MID(SD_Time__c, 12, 2)))) &amp; &quot;:&quot; &amp; 
MID(SD_Time__c, 15, 2) &amp; 
IF(VALUE(MID(SD_Time__c, 12, 2)) &gt;= 12, &quot; PM&quot;, &quot; AM&quot;) &amp; &quot;-&quot; &amp;
IF(VALUE(MID(ED_Time__c, 12, 2)) &gt;= 12, 
   IF(VALUE(MID(ED_Time__c, 12, 2)) = 12, &quot;12&quot;, TEXT(VALUE(MID(ED_Time__c, 12, 2)) - 12)), 
   TEXT(VALUE(MID(ED_Time__c, 12, 2)))) &amp; &quot;:&quot; &amp; 
MID(ED_Time__c, 15, 2) &amp; 
IF(VALUE(MID(ED_Time__c, 12, 2)) &gt;= 12, &quot; PM&quot;, &quot; AM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Slot Formatted</label>
    <type>Text</type>
</CustomField>