force-app/main/default/objects/ManodhaaraAppointment__c/fields/Time_Slots__c.field-meta.xml
<CustomField>
    <fullName>Time_Slots__c</fullName>
    <label>Time Slots</label>
    <type>DateTime</type>
</CustomField>