force-app/main/default/objects/ManodhaaraAppointment__c/validationRules/FollowUpDateToBeInFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>FollowUpDateToBeInFuture</fullName>
    <active>true</active>
    <description>Follow up date should be future date</description>
    <errorConditionFormula>Next_Follow_Up_Date__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Next_Follow_Up_Date__c</errorDisplayField>
    <errorMessage>Please provide future date</errorMessage>
</ValidationRule>