force-app/main/default/objects/ManodhaaraAppointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Appointment_Date__c</columns>
    <columns>Time_Slot_Formatted__c</columns>
    <columns>Appointment_Status__c</columns>
    <columns>Mode_Of_Counselling__c</columns>
    <columns>Severity__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>