force-app/main/default/objects/ManodhaaraAppointment__c/listViews/Rejected_Applications.listView-meta.xml
<ListView>
    <fullName>Rejected_Applications</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Applications</label>
</ListView>